src/styles/home.module.css
.art{
    max-width: 100%;
}
.splitHomeMortgage {
    display: flex;
    justify-content: space-between;
    background-color: #f0f0f0;
    margin-top: 20px;
    padding: 3%;
}

.splitText {
    display: flex;
    justify-content: space-between;
    margin: 2%;
    align-items: baseline;
    padding: 35px;
}

.charlotteText {
    font-size: 20px;
    width: 50%;
    padding: 0 10px;
}

.charlotteTextList {
    font-size: 20px;
    width: 50%;
    padding: 0 10px;
}

.charlotteText {
    font-family: quicksand;
}

.charlotteTextList {
    font-family: quicksand;
}

@media (max-width: 768px) {
    .splitText {
        flex-direction: column;
        gap: 15px;
        margin: 6%
    }
    .charlotteText {
        width: 100%;
    }
    .charlotteTextList {
        width: 100%;
    }

    .splitHomeMortgage {
        flex-direction: column-reverse;
        gap: 15px;
    }
}

